// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should have a good base config 1`] = `
Object {
  "plugins": Array [
    Array [
      "postcss-import",
      Object {
        "path": undefined,
      },
    ],
    "postcss-mixins",
    Array [
      "postcss-css-variables",
    ],
    Array [
      "postcss-cssnext",
      Object {
        "features": Object {
          "autoprefixer": Object {
            "remove": false,
          },
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "customProperties": false,
        },
      },
    ],
  ],
}
`;

exports[`should pass options.importPath to postcss-import  1`] = `
Object {
  "plugins": Array [
    Array [
      "postcss-import",
      Object {
        "path": "foo",
      },
    ],
    "postcss-mixins",
    Array [
      "postcss-css-variables",
    ],
    Array [
      "postcss-cssnext",
      Object {
        "features": Object {
          "autoprefixer": Object {
            "remove": false,
          },
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "customProperties": false,
        },
      },
    ],
  ],
}
`;
